# zmk-config-roBa

./: README.md  build.yaml
config/: roBa.keymap  west.yml
keymap-drawer/: roBa.yaml
tools/roba-cli/: .gitignore  .roba-backup.jsonl  README.md  pyproject.toml
tools/roba-cli/proto/cormoran/rip/: custom.proto
tools/roba-cli/proto/cormoran/rsr/: custom.options  custom.proto
tools/roba-cli/proto/zmk/: custom.proto  studio.proto
tools/roba-cli/proto/zmk/combos/: combos.proto
tools/roba-cli/proto/zmk/condlayers/: condlayers.proto
tools/roba-cli/proto/zmk/holdtap/: holdtap.proto
tools/roba-cli/proto/zmk/macros/: macros.proto
tools/roba-cli/roba_cli/: behavior_resolve.py  behaviors.py  cli.py  combos_client.py  condlayer_client.py  connection.py  encoder_client.py  framing.py  holdtap_client.py  keymap_client.py  macro_client.py  macro_dsl.py  rip_client.py  rpc.py
tools/roba-cli/roba_cli/proto/: __init__.py  behaviors_pb2.py  core_pb2.py  custom_pb2.py  keymap_pb2.py  meta_pb2.py  studio_pb2.py
tools/roba-cli/roba_cli/proto/condlayers/: condlayers_pb2.py
tools/roba-cli/roba_cli/proto/cormoran/rip/: custom_pb2.py
tools/roba-cli/roba_cli/proto/cormoran/rsr/: custom_pb2.py
tools/roba-cli/roba_cli/proto/holdtap/: holdtap_pb2.py
tools/roba-cli/roba_cli/proto/macros/: macros_pb2.py
tools/roba-cli/roba_cli/proto/zmk/combos/: combos_pb2.py
tools/roba-cli/tests/: test_behaviors.py  test_combos.py  test_condlayer.py  test_encoder.py  test_framing.py  test_holdtap.py  test_keymap_ops.py  test_macro_dsl.py  test_rip.py  test_rpc.py
(+30 files in other folders)
