[project]
name = "roba-cli"
version = "0.0.1"
requires-python = ">=3.11"
# PyPI 0.3.1 は macOS で serial/BLE 無効のため fallback 扱い。
# 実動作には README セットアップ手順の source ビルド(0.4.0系)を使うこと。
dependencies = ["zmk-studio-api==0.3.1", "pyserial"]

[project.scripts]
roba = "roba_cli.cli:run"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["roba_cli*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
